--- a/IOS/AVFoundationCamera/AVFoundationCamera-Info.plist
+++ b/IOS/AVFoundationCamera/AVFoundationCamera-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.renren-inc.nuomi.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.renren-inc.nuomi</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
